--- a/EmployeePayRoll.html
+++ b/EmployeePayRoll.html
@@ -6,21 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Employee Payroll Form</title>
     <link rel="stylesheet" href="PayRoll.css">
+    
 </head>
 <body>
     <header class="header-content header ">
         <div class="logo-content">
-<img src="Images/logo.png" alt="logo">
-<span class="emp-text">EMPLOYEE</span>
-<span class="emp-text emp-payroll">PAYROLL</span>
+<img src="images/logo.png" alt="logo">
+<div>
+    <span class="emp-text">EMPLOYEE</span>
+    <span class="emp-text emp-payroll">PAYROLL</span>
+</div>
+
 </div>
     </header>
     <div class="form-content">
-        <form action="#" class="form" onsubmit="save(); return false">
-        <div class="form-head">Employee PayRoll Form</div>
+        <form action="#" class="form"
+        onsubmit="save(); return false">
+        <div class="form-head">
+            Employee Payroll Form
+        </div>
         <div class="row-content">
-            <label for="name" class="label text">Name :</label>
-            <input type="text" class="input" id="name" name="name" placeholder="Your Name" required>
+            <label for="name" class="label text">Name</label>
+            <input type="text" class="input" id="name"
+            name="name" placeholder="Your name.." required>
         </div>
         <div class="row-content">
             <label for="profile" class="label text">Profile image</label>
@@ -42,6 +50,39 @@
                     <img  class="profile" id="image4" src="images/profile4.png" alt="">
                 </label>
             </div>
+        </div>
+        <div class="row-content">
+            <label for="gender" class="label text">Gender</label>
+            <div>
+                <input type="radio" id="male" name="gender" value="male">
+                <label for="male" class="text">Male</label>
+                <input type="radio" id="female" name="gender" value="female">
+                <label for="female" class="text">Female</label>
+            </div>
+        </div>
+        <div class="row-content">
+            <label for="department" class="label text">Department</label>
+            <div>
+                <input type="checkbox" class="checkbox" id="hr" name="hr" value="HR">
+                <label class="text" for="hr">HR</label>
+                <input type="checkbox" class="checkbox" id="sales" name="sales"  value="HR">
+                <label class="text" for="sales">Sales</label>
+                <input type="checkbox" class="checkbox" id="finance"  name="finance"  value="Finance">
+                <label class="text" for="finance">Finance</label>
+                <input type="checkbox" class="checkbox" id="engineer" name="engineer" value="Engineer">
+                <label class="text" for="engineer">Engineer</label>
+                <input type="checkbox" class="checkbox" id="others" name="others" value="Others">
+                <label class="text" for="others">Others</label>
+            </div>
+        </div>
+        <div class="row-conent">
+            <label for="salary" class="label text">Choose your salary</label>
+            <input type="range" class="input" name="salary" min="300000"
+            max="500000" step="100" value="400000">
+            <output class="salary-output text" for="salary">400000</output>
+
+        </div>
+
         </form>
     </div>
 </body>
